# rpvm

./: .gitignore  ChangeLog  INDEX  README  cleanup  configure  configure.in
R/: rpvm.R  sprng.R.in  zzz.R  zzz.R.in
demo/: 00Index  README  forkjoin.R  hello.R  helloR.R  pvm_test.R
inst/: pvmhosts.in  slapply.R  slaveR.sh
man/: PVM.barrier.Rd  PVM.bcast.Rd  PVM.buffers.Rd  PVM.bufinfo.Rd  PVM.config.Rd  PVM.errors.Rd  PVM.exit.Rd  PVM.freebuf.Rd  PVM.gather.Rd  PVM.getinst.Rd  PVM.gettid.Rd  PVM.group.Rd  PVM.gsize.Rd  PVM.initsend.Rd  PVM.kill.Rd  PVM.mcast.Rd  PVM.mkbuf.Rd  PVM.mstats.Rd  PVM.mytid.Rd  PVM.notify.Rd  PVM.nrecv.Rd  PVM.options.Rd  PVM.pack.Rd  PVM.parent.Rd  PVM.probe.Rd  PVM.pstats.Rd  PVM.rapply.Rd  PVM.recv.Rd  PVM.reduce.Rd  PVM.scatter.Rd  PVM.send.Rd  PVM.serialize.Rd  PVM.spawn.Rd  PVM.tasks.Rd  PVM.tidtohost.Rd  PVM.trecv.Rd  PVM.unpack.Rd  PVMD.Rd  free.sprng.Rd  inin.sprng.master.Rd  (+4 more)
src/: Makevars.in  TAGS  rpvm_core.c  rpvm_ser.c  semantic.cache  sprng_core.c  utils.c  utils.h
tests/: README  group_test.R  pvm_test.R  sprng_test.R  sprng_test.R.in
