AC_INIT(DESCRIPTION)

if test -z "${PVM_ROOT}"; then
    echo "Warning: PVM_ROOT not defined."
    echo "Try to guess where pvm is installed..."
    if test -d /usr/lib/pvm3; then
        PVM_ROOT=/usr/lib/pvm3
    elif test -d ${HOME}/pvm3; then
        PVM_ROOT=${HOME}/pvm3
    fi
    if test -n ${PVM_ROOT}; then
        echo "Found pvm: ${PVM_ROOT} "
        echo "Warning: You need set PVM_ROOT to ${PVM_ROOT} before use pvm."
        echo "See pvm_intro(1PVM)"
    else
        echo "Cannot find pvm."
        echo "If pvm is installed, set PVM_ROOT to where pvm is."
        echo "Otherwise, please install pvm first."
        exit 1
    fi
fi

echo "PVM_ROOT is ${PVM_ROOT}"

if test -z "${PVM_ARCH}"; then
    PVM_ARCH=`${PVM_ROOT}/lib/pvmgetarch`
fi

echo "PVM_ARCH is ${PVM_ARCH}"

AC_CHECK_HEADER(pvm3.h,PVM_INCLUDE="",
    echo "Try to find pvm3.h in ${PVM_ROOT}/include ..."
    if test -f ${PVM_ROOT}/include/pvm3.h; then
        echo "Found"
        PVM_INCLUDE="-I${PVM_ROOT}/include"
    else 
        echo "Cannot find pvm header file."; exit 1
    fi
)
AC_CHECK_LIB(pvm3,pvm_mytid,PVM_LIBS="",
    echo "Try to find libpvm3 in ${PVM_ROOT}/lib/${PVM_ARCH} ..."
    if test -f ${PVM_ROOT}/lib/${PVM_ARCH}/libpvm3.a; then
        echo "Found"
        PVM_LIBS="-L${PVM_ROOT}/lib/${PVM_ARCH}"
    else
        echo "Cannot find libpvm3"; exit 1
    fi
)

PKG_LIBS="${PVM_LIBS} -lpvm3"
PKG_CPPFLAGS="${PVM_INCLUDE}"

AC_SUBST(PVM_ROOT)
AC_SUBST(PVM_ARCH)
AC_SUBST(PKG_LIBS)
AC_SUBST(PKG_CPPFLAGS)

AC_OUTPUT(src/Makevars)
